--- a/SurfsUp/climate_starter_LM2_Copy.ipynb
+++ b/SurfsUp/climate_starter_LM2_Copy.ipynb
@@ -419,35 +419,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flask import Flask, jsonify"
+    "from flask import Flask, jsonify\n",
+    "from sqlalchemy import create_engine\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#DB Setup\n",
-    "\n",
-    "engine=create_engine(\"sqlite:///hawaii.sqlite\")\n",
-    "\n",
-    "# reflect an existing database into a new model\n",
-    "Base = automap_base()\n",
-    "\n",
-    "# reflect the tables\n",
-    "Base.prepare(autoload_with=engine)"
+    "# Create an engine to connect to the SQLite database\n",
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")\n",
+    "conn=engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'automap_base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# reflect an existing database into a new model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Base \u001b[38;5;241m=\u001b[39m \u001b[43mautomap_base\u001b[49m()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# reflect the tables\u001b[39;00m\n\u001b[0;32m      4\u001b[0m Base\u001b[38;5;241m.\u001b[39mprepare(autoload_with\u001b[38;5;241m=\u001b[39mengine)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'automap_base' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
+    "# reflect the tables\n",
+    "Base.prepare(autoload_with=engine)\n",
+    "# Save reference to the table\n",
+    "#hawaii = Base.classes.station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Date = Base.classes.date\n",
+    "#Prcp = Base.classes.prcp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Flask setup\n",
+    "app=Flask (__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'app' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#List all api Flask routes\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;129m@app\u001b[39m\u001b[38;5;241m.\u001b[39mroute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwelcome\u001b[39m():\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAvailable Routes:<br/>\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClimate Analysis<br/>\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/api/v1.0/tobs<br/>\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     12\u001b[0m     )\n\u001b[0;32m     14\u001b[0m \u001b[38;5;129m@app\u001b[39m\u001b[38;5;241m.\u001b[39mroute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/api/v1.0/names\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnames\u001b[39m():\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;66;03m# Create our session (link) from Python to the DB\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'app' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#List all api Flask routes\n",
+    "@app.route(\"/\")\n",
+    "def welcome():\n",
+    "    return (\n",
+    "        f\"Available Routes:<br/>\"\n",
+    "        f\"Climate Analysis<br/>\"\n",
+    "        f\"/api/v1.0/names<br/>\"\n",
+    "        f\"/api/v1.0/stations<br/>\"\n",
+    "        f\"/api/v1.0/date<br/>\"\n",
+    "        f\"/api/v1.0/prcp<br>\"\n",
+    "        f\"/api/v1.0/tobs<br/>\"\n",
+    "    )\n",
+    "\n",
+    "@app.route(\"/api/v1.0/names\")\n",
+    "def names():\n",
+    "    # Create our session (link) from Python to the DB\n",
+    "    session = Session(engine)\n",
+    "    results = session.query(stations.name).all()\n",
+    "    session = close()\n",
+    "\n",
+    "    names_list = [result[0] for result in results]\n",
+    "    return jsonify(names_list)\n",
+    "\n",
+    "@app.route(\"/api/v1.0/precipitation\")\n",
+    "def precipitation():\n",
+    "    return (\n",
+    "        f\"date <br/>\"\n",
+    "        f\"prcp <br/>\"\n",
+    ")\n",
+    "    return jsonify(precipitation)\n",
+    "\n",
+    "most_active_station = 'USC00519281'  \n",
+    "\n",
+    "temperature_stats = session.query(\n",
+    "    func.min(Measurement.tobs),\n",
+    "    func.max(Measurement.tobs),\n",
+    "    func.avg(Measurement.tobs)\n",
+    ").filter(Measurement.station == most_active_station).all()\n",
+    "\n",
+    "min_temp, max_temp, avg_temp = temperature_stats[0]\n",
+    "return jsonify(temperature_stats)\n",
+    "\n",
+    "print(f\"Lowest Temperature: {min_temp}\")\n",
+    "print(f\"Highest Temperature: {max_temp}\")\n",
+    "print(f\"Average Temperature: {avg_temp}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# View all of the classes that automap found\n",
     "Base.classes.keys()"
@@ -458,40 +576,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Date = Base.classes.date\n",
-    "Prcp = Base.classes.prcp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@app.route(\"api/v1.0/hawaii\")\n",
-    "def hawaii:\n",
-    "    return jsonify (hawaii)\n",
-    "\n",
-    "@app.route(\"/\")\n",
-    "def welcome():\n",
-    "    return(\n",
-    "        f\"Climate Analysis <br/>\"\n",
-    "        f\"Available Routes: <br/>\"\n",
-    ")\n",
-    "\n",
-    "@app.route(\"api/v1.0/hawaii\")\n",
-    "def hawaii:\n",
-    "    return jsonify (hawaii)\n",
-    "\n",
-    "app.route(\"/api/v1.0/precipitation\")\n",
-    "def precipitation():\n",
-    "    return(\n",
-    "        f\"date <br/>\"\n",
-    "        f\"prcp <br/>\"\n",
-    ")\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
